--- a/streamlit_keycloak/frontend/package.json
+++ b/streamlit_keycloak/frontend/package.json
@@ -1,6 +1,7 @@
 {
   "name": "streamlit-keycloak",
   "version": "1.0.1",
+  "type": "module",
   "scripts": {
     "build": "rollup -c",
     "dev": "rollup -c -w",
@@ -8,24 +9,25 @@
     "validate": "svelte-check"
   },
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^12.0.0",
-    "@rollup/plugin-node-resolve": "^8.0.0",
-    "@rollup/plugin-typescript": "^4.0.0",
-    "@tsconfig/svelte": "^1.0.0",
-    "rollup": "^2.3.4",
-    "rollup-plugin-livereload": "^1.0.0",
-    "rollup-plugin-svelte": "^6.1.1",
-    "rollup-plugin-terser": "^5.1.2",
-    "svelte": "^3.0.0",
-    "svelte-check": "^1.0.0",
-    "svelte-preprocess": "^4.0.0",
-    "tslib": "^2.0.0",
-    "typescript": "^3.9.3"
+    "@rollup/plugin-commonjs": "^26.0.1",
+    "@rollup/plugin-node-resolve": "^15.2.3",
+    "@rollup/plugin-typescript": "^11.1.6",
+    "@tsconfig/svelte": "^5.0.4",
+    "rollup": "^4.19.0",
+    "rollup-plugin-livereload": "^2.0.5",
+    "rollup-plugin-svelte": "^7.2.2",
+    "@rollup/plugin-terser": "^0.4.4",
+    "svelte": "^4.2.18",
+    "svelte-check": "^3.8.4",
+    "svelte-preprocess": "^6.0.2",
+    "tslib": "^2.6.3",
+    "typescript": "^5.5.3",
+    "rollup-plugin-css-only": "^4.5.2"
   },
   "dependencies": {
     "apache-arrow": "^0.17.0",
-    "event-target-shim": "^5.0.1",
+    "event-target-shim": "^6.0.2",
     "keycloak-js": "^25.0.2",
-    "sirv-cli": "^1.0.0"
+    "sirv-cli": "^2.0.2"
   }
 }
